# gss-analysis

./: .gitignore  README.md  pyproject.toml  scratch.ipynb
gss/: __init__.py  config.py  import.py  main.py  metadata.py  settings.toml
gss/layouts/: codebook.py  gss.metadata.pickle  test.arrows  test.py
reports/: frequencies.txt  search.txt  univariate.txt
scripts/: marriage_and_sex.py  simple_frequency.py  univariates.py
